<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="38dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="193dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_margin="100dp"
            app:srcCompat="@drawable/list" />

        <EditText
            android:id="@+id/edNama"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15px"
            android:background="@color/cream"
            android:ems="10"
            android:hint="@string/aNama"
            android:inputType="textPersonName"
            android:padding="12px" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10px"
            android:background="@color/teal_700"
            android:ems="10"
            android:hint="@string/aEmail"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:padding="12dp"
            />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_200"
            android:ems="10"
            android:hint="@string/aPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#00773f"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/bSignin"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/btDaftar"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/bDaftar"
            android:textColor="@color/teal_700"
            android:textSize="50px"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>