<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue"
    tools:context=".Hasil_todo">


    <TextView

        android:textColor="@color/white"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tData"
        android:textStyle="bold"
        android:textSize="14pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:background="@color/aliceblue"
        android:padding="5dp"
        android:text="@string/tJenis"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:background="@color/aliceblue"
        android:id="@+id/textView3"
        android:padding="5dp"
        android:textColor="@color/white"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:text="@string/tWaktu"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:background="@color/aliceblue"
        android:padding="5dp"
        android:text="@string/tTaks"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/eTaks"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:background="@color/aliceblue"
        android:text="@string/txTaks"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.129"


        />

    <TextView
        android:id="@+id/eJenis"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:background="@color/aliceblue"
        android:text="@string/txJenis"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/eTaks"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/eWaktu"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:background="@color/aliceblue"
        android:text="@string/txWaktu"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/eTaks"
        app:layout_constraintVertical_bias="0.244" />


</androidx.constraintlayout.widget.ConstraintLayout>